src/test/deca/syntax/valid/parser/oracle/mult_expr_fourth_deriv.deca
{
  int i = 0;
  -!readFloat() % 5; -!readFloat() % 10 % 2; !!x.p() % !!x.p(); 49.0 % "Hello World" % (2 % true));
}
