src/test/deca/syntax/invalid/parser/oracle/ident_with_decl_inside.deca
{
  A(int i = 0);
}
